Improve IE11 support

--- a/src/demos/showcase/9.html
+++ b/src/demos/showcase/9.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="bfg__box bfg__box--9 bfg bfg--row">
-      <div class="bfg__box bfg__box--8 bfg__box--12"></div>
+      <div class="bfg__box bfg__box--12"></div>
     </div>
   </div>
 
