Add demo for nested grid in the same direction

--- a/src/demos/showcase/16.html
+++ b/src/demos/showcase/16.html
@@ -21,7 +21,7 @@
     In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--default</code> to fill the boxes content.
   </div>
 
-  <div class="bfg bfg--row bfg--gap bfg--wrap">
+  <div class="bfg bfg--col bfg--gap bfg--wrap">
     <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--default"></div></div>
 
     <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--default"></div></div>
