--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
     <a href="demos/showcase/13.html"></a>
     <a href="demos/showcase/14.html"></a>
     <a href="demos/showcase/15.html"></a>
+    <a href="demos/showcase/16.html"></a>
+    <a href="demos/showcase/17.html"></a>
   </div>
 
   <footer>
