--- a/src/demos/showcase/11.html
+++ b/src/demos/showcase/11.html
@@ -16,14 +16,18 @@
 </head>
 <body>
   <div class="demo-source__description">
-    To fix the width of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>width</code>.<br>
-    To see it in action, open on a separate tab and resize the window.
+    This demo shows nested grid in the same row direction.
   </div>
 
   <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--fixed" style="width:150px"></div>
     <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box bfg__box--8"></div>
+    <div class="bfg__box bfg__box--4 bfg bfg--row">
+
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--6"></div>
+
+    </div>
+    <div class="bfg__box bfg__box--4"></div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
