--- a/src/demos/showcase/14.html
+++ b/src/demos/showcase/14.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-page-bg--gray">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,33 +16,16 @@
 </head>
 <body>
   <div class="demo-source__description">
-    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
-    <br>
-    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--default</code> to fill the boxes content.
+    To fix the height of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>height</code>.<br>
+    To see it in action, open on a separate tab and resize the window.
   </div>
 
-  <div class="bfg bfg--col bfg--gap bfg--wrap">
-    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--default"></div></div>
-
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
+  <div class="bfg bfg--col">
+    <div class="bfg__box bfg__box--fixed" style="height:150px"></div>
+    <div class="bfg__box bfg__box--4"></div>
+    <div class="bfg__box bfg__box--8"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
