--- a/src/introduction.html
+++ b/src/introduction.html
@@ -118,6 +118,10 @@ Ideally the grid parent node should have a padding equal to the gap.</p>
 </blockquote>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;...&lt;/div&gt;
 </code></pre>
+<h3>.bfg--justify-[J], .bfg--align-[A]</h3>
+<p><strong>[J]</strong> Justify: <code>start</code>, <code>center</code>, <code>end</code>, <code>between</code>, <code>around</code>.</p>
+<p><strong>[A]</strong> Align: <code>start</code>, <code>center</code>, <code>end</code>.</p>
+<p>TODO... Give an explanation...</p>
 <h3>.bfg--box-overflow and .bfg--content-overflow</h3>
 <p>By default, <code>.bfg__box</code> and <code>.bfg__content</code> elements use the rule <code>overflow: auto;</code>.</p>
 <p>Use <code>.bfg--box-overflow</code> modifier on <code>.bfg</code> block to apply the rule <code>overflow: visible;</code> instead on all <code>.bfg__box</code> elements.</p>
