--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,12 @@
     <a href="demos/showcase/15.html"></a>
     <a href="demos/showcase/16.html"></a>
     <a href="demos/showcase/17.html"></a>
+    <a href="demos/showcase/18.html"></a>
+    <a href="demos/showcase/19.html"></a>
   </div>
 
   <footer>
-    <p><a href="https://github.com/avine/bem-flex-grid/">GitHub</a></p>
+    <p>View on <a href="https://github.com/avine/bem-flex-grid/">GitHub</a>.</p>
   </footer>
 
   <script>Demo.showcase();</script>
