--- a/src/demos/showcase/13.html
+++ b/src/demos/showcase/13.html
@@ -16,17 +16,15 @@
 </head>
 <body>
   <div class="demo-source__description">
-    This demo shows nested grid in the same row direction.
+    When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
+    <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
+    <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
   </div>
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box bfg__box--4 bfg bfg--row">
-
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--6"></div>
-
-    </div>
+  <div class="bfg bfg--row bfg--main-between">
+    <div class="bfg__box bfg__box--2"></div>
+    <div class="bfg__box bfg__box--fixed"><i>Fixed box</i></div>
+    <div class="bfg__box bfg__box--fixed"><i>Fixed box</i></div>
     <div class="bfg__box bfg__box--4"></div>
   </div>
 
