--- a/src/demos/showcase/19.html
+++ b/src/demos/showcase/19.html
@@ -10,49 +10,39 @@
 
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="19.scss">
+  <link rel="stylesheet" href="../../bem-flex-grid.ie11.scss">
 
   <script src="../demo.ts"></script>
 </head>
 <body>
   <div class="demo-source__description">
-    Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
-    Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.
+    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
+    <br>
+    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--default</code> to fill the boxes content.
   </div>
 
-  <div class="bfg bfg--col bfg--gap">
-    <div class="bfg__box bfg__box--3">
-      <!-- content with header -->
-      <header class="bfg__header bfg__header--error">Header</header>
-      <div class="bfg__content bfg__content--error"></div>
-    </div>
+  <div class="bfg bfg--row bfg--gap bfg--wrap">
+    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--6 bfg bfg--row">
-      <div class="bfg__box bfg__box--3">
-        <!-- content with header and actions -->
-        <div class="bfg__action bfg__action--default"><a href="#action-2">Action 2</a></div>
-        <div class="bfg__action bfg__action--default"><a href="#action-1">Action 1</a></div>
-        <header class="bfg__header bfg__header--default">Very very very long Header</header>
-        <div class="bfg__content bfg__content--default"></div>
-      </div>
+    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--default"></div></div>
 
-      <div class="bfg__box bfg__box--6">
-        <!-- content without header -->
-        <div class="bfg__content bfg__content--default"></div>
-      </div>
+    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--default"></div></div>
 
-      <div class="bfg__box bfg__box--3">
-        <header class="bfg__header bfg__header--info">Header</header>
-        <div class="bfg__content bfg__content--info"></div>
-      </div>
-    </div>
+    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--3">
-      <header class="bfg__header bfg__header--warning">Header</header>
-      <div class="bfg__content bfg__content--warning"></div>
-    </div>
+    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--default"></div></div>
+
+    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--default"></div></div>
+
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.pageHeight();</script>
 </body>
 </html>
