--- a/src/demos/showcase/20.html
+++ b/src/demos/showcase/20.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="demo-page-bg--gray">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,27 +16,33 @@
 </head>
 <body>
   <div class="demo-source__description">
-    This demo shows real nested grid in the same row direction.
+    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
+    <br>
+    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--default</code> to fill the boxes content.
   </div>
 
-  <div class="bfg bfg--col">
-    <div class="bfg__box bfg__box--3">
+  <div class="bfg bfg--col bfg--gap bfg--wrap">
+    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--default"></div></div>
 
-      <div class="bfg bfg--row">
-        <div class="bfg__box bfg__box--6"></div>
-        <div class="bfg__box bfg__box--6"></div>
-      </div>
+    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--default"></div></div>
 
-    </div>
-    <div class="bfg__box bfg__box--9">
+    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--default"></div></div>
 
-      <div class="bfg bfg--row">
-        <div class="bfg__box bfg__box--12"></div>
-      </div>
+    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--default"></div></div>
 
-    </div>
+    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--default"></div></div>
+
+    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--default"></div></div>
+
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.pageHeight();</script>
 </body>
 </html>
