Rename `--default` into `--light`

--- a/src/demos/showcase/21.html
+++ b/src/demos/showcase/21.html
@@ -30,15 +30,15 @@
     <div class="bfg__box bfg__box--6 bfg bfg--row">
       <div class="bfg__box bfg__box--3">
         <!-- content with header and actions -->
-        <div class="bfg__action bfg__action--default"><a href="#action-2">Action 2</a></div>
-        <div class="bfg__action bfg__action--default"><a href="#action-1">Action 1</a></div>
-        <header class="bfg__header bfg__header--default">Very very very long Header</header>
-        <div class="bfg__content bfg__content--default"></div>
+        <div class="bfg__action bfg__action--light"><a href="#action-2">Action 2</a></div>
+        <div class="bfg__action bfg__action--light"><a href="#action-1">Action 1</a></div>
+        <header class="bfg__header bfg__header--light">Very very very long Header</header>
+        <div class="bfg__content bfg__content--light"></div>
       </div>
 
       <div class="bfg__box bfg__box--6">
         <!-- content without header -->
-        <div class="bfg__content bfg__content--default"></div>
+        <div class="bfg__content bfg__content--light"></div>
       </div>
 
       <div class="bfg__box bfg__box--3">
