Rename into `api.html`

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
   <header>
     <p>In this page, you'll find a lot of real examples of how to use the grid.</p>
-    <p>For a quick overview, check out this <a href="introduction.html">introduction</a>.</p>
+    <p>To deep dive, check out the <a href="api.html">api</a>.</p>
   </header>
 
   <div id="demo-showcase">
