--- a/src/api.html
+++ b/src/api.html
@@ -384,7 +384,7 @@ npm start
 # Build `bem-flex-grid.ie11.css` and `bem-flex-grid.ie11.min.css` from `bem-flex-grid.ie11.scss`
 npm run build
 
-# Build `introduction.html` from `README.md`
+# Build `api.html` from `README.md`
 npm run md-to-html
 </code></pre>
 
