--- a/src/demos/showcase/8.html
+++ b/src/demos/showcase/8.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="demo-source__description">
-    When using <code>.bfg--wrap</code> and <code>.bfg__box</code> are displayed on multiple lines.<br>
+    When using <code>.bfg--wrap</code>, <code>.bfg__box</code> are displayed on multiple lines.<br>
     If you know the exact number of lines (2 in this demo), you can still fit the <code>.bfg--col</code> width using <code>.bfg--lines-2</code>.
     In this case, all the columns will have the same width.
   </div>
