--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
   <script src="demos/demo.ts"></script>
 </head>
 <body>
+  <a href="index2.html" class="demo-logo" style="display:block; margin:1rem auto 4rem auto;">
+    <div class="demo-logo__square demo-logo__square--tl"></div>
+    <div class="demo-logo__square demo-logo__square--tr"></div>
+    <div class="demo-logo__square demo-logo__square--bl"></div>
+    <div class="demo-logo__square demo-logo__square--br"></div>
+  </a>
+
   <h1>Bem Flex Grid</h1>
 
   <header>
