New branding (in progress...)

--- a/src/demos/showcase/21.html
+++ b/src/demos/showcase/21.html
@@ -53,6 +53,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.fullScreenSwitcher();</script>
 </body>
 </html>
