--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-page-height--disabled">
+<html lang="en" class="demo-full-screen--disabled">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="demos/demo.scss">
   <link rel="stylesheet" href="demos/index.scss">
 
-  <link rel="stylesheet" href="bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
   <script src="demos/demo.ts"></script>
 </head>
