--- a/src/demos/showcase/10.html
+++ b/src/demos/showcase/10.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="../../bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="../../lib/bem-flex-grid.ie11.scss">
 
   <script src="../demo.ts"></script>
 </head>
@@ -31,6 +31,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
 </body>
 </html>
