--- a/src/index2.html
+++ b/src/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-page-height--disabled">
+<html lang="en" class="demo-full-screen--disabled">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,21 +11,22 @@
   <link rel="stylesheet" href="demos/demo.scss">
   <link rel="stylesheet" href="demos/index.scss">
 
-  <link rel="stylesheet" href="bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 </head>
-<body>
+<body style="padding:0;">
+  <div style="padding:3rem 0; background-color:#f5f5f5;">
+    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
+      <div class="bfg__box bfg__box--fixed" style="margin-right:2rem; line-height:6rem; font-size:4rem; color:#666;">
+        Bem Flex Grid
+      </div>
 
-  <div class="bfg bfg--row bfg--box-overflow bfg--main-center bfg--cross-center">
-    <div class="bfg__box bfg__box--fixed">
-      <div style="font-size:3.5rem; line-height:3.5rem; padding-right:3.5rem;">Bem Flex Grid</div>
-    </div>
-
-    <div class="bfg__box bfg__box--fixed">
-      <div class="demo-logo">
-        <div class="demo-logo__square demo-logo__square--tl"></div>
-        <div class="demo-logo__square demo-logo__square--tr"></div>
-        <div class="demo-logo__square demo-logo__square--bl"></div>
-        <div class="demo-logo__square demo-logo__square--br"></div>
+      <div class="bfg__box bfg__box--fixed">
+        <div class="demo-logo">
+          <div class="demo-logo__square demo-logo__square--tl"></div>
+          <div class="demo-logo__square demo-logo__square--tr"></div>
+          <div class="demo-logo__square demo-logo__square--bl"></div>
+          <div class="demo-logo__square demo-logo__square--br"></div>
+        </div>
       </div>
     </div>
   </div>
