--- a/src/index2.html
+++ b/src/index2.html
@@ -12,11 +12,25 @@
   <link rel="stylesheet" href="demos/index.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
+
+  <style>
+    .demo-header {
+      padding: 6rem 0;
+      background-color: #f5f5f5;
+      border-bottom: 1px solid #e5e5e5;
+    }
+    .demo-header-title {
+      margin-right: 2rem;
+      line-height: 6rem;
+      font-size: 4rem;
+      color: #666;
+    }
+  </style>
 </head>
 <body style="padding:0;">
-  <div style="padding:3rem 0; background-color:#f5f5f5;">
+  <div class="demo-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-      <div class="bfg__box bfg__box--fixed" style="margin-right:2rem; line-height:6rem; font-size:4rem; color:#666;">
+      <div class="bfg__box bfg__box--fixed demo-header-title">
         Bem Flex Grid
       </div>
 
