--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,14 @@
     </div>
   </div>
 
-  <!--<header>
+  <header style="display:none;">
     <p>In this page, you'll find a lot of real examples of how to use the grid.</p>
     <p>To deep dive, check out the <a href="api.html">api</a>.</p>
-  </header>-->
+  </header>
 
   <div id="demo-showcase">
+    <a href="demos/showcase/0.html"></a>
+    <a href="demos/showcase/00.html"></a>
     <a href="demos/showcase/1.html"></a>
     <a href="demos/showcase/2.html"></a>
     <a href="demos/showcase/3.html"></a>
