--- a/src/index2.html
+++ b/src/index2.html
@@ -12,38 +12,55 @@
   <link rel="stylesheet" href="demos/index.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
-
-  <style>
-    .demo-header {
-      padding: 6rem 0;
-      background-color: #f5f5f5;
-      border-bottom: 1px solid #e5e5e5;
-    }
-    .demo-header-title {
-      margin-right: 2rem;
-      line-height: 6rem;
-      font-size: 4rem;
-      color: #666;
-    }
-  </style>
 </head>
-<body style="padding:0;">
-  <div class="demo-header">
-    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-      <div class="bfg__box bfg__box--fixed demo-header-title">
-        Bem Flex Grid
-      </div>
-
-      <div class="bfg__box bfg__box--fixed">
-        <div class="demo-logo">
-          <div class="demo-logo__square demo-logo__square--tl"></div>
-          <div class="demo-logo__square demo-logo__square--tr"></div>
-          <div class="demo-logo__square demo-logo__square--bl"></div>
-          <div class="demo-logo__square demo-logo__square--br"></div>
-        </div>
-      </div>
+<body>
+  <div class="demo-top demo-top--background">
+    <div class="demo-wrapper">
+      Bem Flex Grid
     </div>
   </div>
+  <header class="demo-top demo-top--forground">
+    <div class="demo-wrapper">
+      <a href="api.html" class="demo-top__link">API</a>
+      <a href="https://github.com/avine/bem-flex-grid/" class="demo-top__link">Github</a>
+    </div>
+  </header>
+
+  <header class="demo-header">
+    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
+      <h1 class="bfg__box bfg__box--fixed demo-header__title">
+        Bem Flex Grid
+      </h1>
+
+      <div class="bfg__box bfg__box--fixed demo-logo">
+        <div class="demo-logo__square demo-logo__square--tl"></div>
+        <div class="demo-logo__square demo-logo__square--tr"></div>
+        <div class="demo-logo__square demo-logo__square--bl"></div>
+        <div class="demo-logo__square demo-logo__square--br"></div>
+      </div>
+    </div>
+  </header>
+
+  <div class="demo-wrapper">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum molestie arcu ac dapibus interdum. Proin faucibus at felis eu blandit. Etiam accumsan sapien nec scelerisque sodales. Nam rhoncus dolor porttitor rhoncus ullamcorper. Maecenas odio justo, tempor eget arcu in, tincidunt tincidunt est. Vestibulum maximus elementum dui id interdum. Vestibulum pulvinar id libero id suscipit. Cras suscipit ac erat eu sodales. Mauris efficitur imperdiet metus, eget semper arcu imperdiet id. In eget elit metus. Maecenas sed ante eu massa dictum feugiat. Nulla odio felis, rhoncus sit amet tellus vel, dignissim cursus justo. Donec gravida sagittis felis id porttitor.
+      <br><br>
+      Etiam imperdiet elementum est. Pellentesque volutpat, orci a euismod tristique, odio ligula tristique magna, eget semper turpis turpis eget ligula. Phasellus eget congue libero. Integer suscipit mauris sed odio fringilla, et malesuada justo mattis. Fusce ac sodales est. Nulla ac arcu risus. Suspendisse urna metus, semper et ipsum quis, congue blandit risus.
+      <br><br>
+      Aenean finibus porta arcu sed lacinia. Morbi consectetur metus vitae laoreet volutpat. Fusce varius mauris purus, ut ornare nibh tincidunt id. Morbi at placerat nunc. Sed imperdiet est sit amet ornare tempus. Vivamus nec aliquet libero, a pharetra diam. Etiam velit erat, sagittis id lectus sed, ullamcorper dignissim leo. Sed maximus tortor in tortor suscipit, vel scelerisque justo molestie. Sed maximus ut tortor id vulputate. Nunc mollis magna ligula, quis aliquam leo consectetur vel.
+      <br><br>
+      Mauris hendrerit dui lorem, eu imperdiet est rhoncus eget. Aliquam varius tempor sollicitudin. Vivamus ut diam vel est facilisis scelerisque. In pretium ligula non sem accumsan pretium. Nunc imperdiet erat turpis, sit amet malesuada tellus sagittis sit amet. Mauris gravida lorem nec consectetur ullamcorper. Quisque placerat eros eu dui volutpat, et imperdiet arcu sodales. Cras id luctus est. Curabitur sit amet tristique mi.
+      <br><br>
+      Cras eget erat a diam posuere congue ut et turpis. Sed tristique eros eget felis molestie, luctus rhoncus lorem vehicula. Nam pharetra finibus libero id lobortis. Nam rutrum nisl nec leo bibendum varius. Aenean in nulla non tortor ultricies vehicula. Aenean aliquam dolor non finibus sodales. Vivamus varius neque eu mi finibus volutpat id in massa. Cras ligula nunc, facilisis eu commodo ut, blandit sed urna. Nullam ac felis magna. Nulla facilisi. Integer tempus ipsum ac massa maximus aliquet eu in turpis. Quisque dignissim vestibulum nisl sed varius. Curabitur vitae vulputate justo. Morbi et ex neque.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum molestie arcu ac dapibus interdum. Proin faucibus at felis eu blandit. Etiam accumsan sapien nec scelerisque sodales. Nam rhoncus dolor porttitor rhoncus ullamcorper. Maecenas odio justo, tempor eget arcu in, tincidunt tincidunt est. Vestibulum maximus elementum dui id interdum. Vestibulum pulvinar id libero id suscipit. Cras suscipit ac erat eu sodales. Mauris efficitur imperdiet metus, eget semper arcu imperdiet id. In eget elit metus. Maecenas sed ante eu massa dictum feugiat. Nulla odio felis, rhoncus sit amet tellus vel, dignissim cursus justo. Donec gravida sagittis felis id porttitor.
+      <br><br>
+      Etiam imperdiet elementum est. Pellentesque volutpat, orci a euismod tristique, odio ligula tristique magna, eget semper turpis turpis eget ligula. Phasellus eget congue libero. Integer suscipit mauris sed odio fringilla, et malesuada justo mattis. Fusce ac sodales est. Nulla ac arcu risus. Suspendisse urna metus, semper et ipsum quis, congue blandit risus.
+      <br><br>
+      Aenean finibus porta arcu sed lacinia. Morbi consectetur metus vitae laoreet volutpat. Fusce varius mauris purus, ut ornare nibh tincidunt id. Morbi at placerat nunc. Sed imperdiet est sit amet ornare tempus. Vivamus nec aliquet libero, a pharetra diam. Etiam velit erat, sagittis id lectus sed, ullamcorper dignissim leo. Sed maximus tortor in tortor suscipit, vel scelerisque justo molestie. Sed maximus ut tortor id vulputate. Nunc mollis magna ligula, quis aliquam leo consectetur vel.
+      <br><br>
+      Mauris hendrerit dui lorem, eu imperdiet est rhoncus eget. Aliquam varius tempor sollicitudin. Vivamus ut diam vel est facilisis scelerisque. In pretium ligula non sem accumsan pretium. Nunc imperdiet erat turpis, sit amet malesuada tellus sagittis sit amet. Mauris gravida lorem nec consectetur ullamcorper. Quisque placerat eros eu dui volutpat, et imperdiet arcu sodales. Cras id luctus est. Curabitur sit amet tristique mi.
+      <br><br>
+      Cras eget erat a diam posuere congue ut et turpis. Sed tristique eros eget felis molestie, luctus rhoncus lorem vehicula. Nam pharetra finibus libero id lobortis. Nam rutrum nisl nec leo bibendum varius. Aenean in nulla non tortor ultricies vehicula. Aenean aliquam dolor non finibus sodales. Vivamus varius neque eu mi finibus volutpat id in massa. Cras ligula nunc, facilisis eu commodo ut, blandit sed urna. Nullam ac felis magna. Nulla facilisi. Integer tempus ipsum ac massa maximus aliquet eu in turpis. Quisque dignissim vestibulum nisl sed varius. Curabitur vitae vulputate justo. Morbi et ex neque.
+      </div>
 
 </body>
 </html>
